--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load static %}
 
 <!DOCTYPE HTML>
 <!--
@@ -11,7 +12,7 @@
 		<title>Strata by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
+		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}"/>
 	</head>
 	<body class="is-preload">
 
