--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,15 +1,10 @@
 {% load static %}
 
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
-	<title>Strata by HTML5 UP</title>
+	<title>Blog Django</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
@@ -21,7 +16,7 @@
 	<header id="header">
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="{% static 'images/avatar.jpg' %}" alt="" /></a>
-			<h1><strong>I am Strata</strong>, a super simple<br />
+			<h1><strong>Django 3</strong>, is super Framework<br />
 				responsive site template freebie<br />
 				crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 		</div>
@@ -33,55 +28,34 @@
 		<!-- One -->
 		<section id="one">
 			<header class="major">
-				<h2>Ipsum lorem dolor aliquam ante commodo<br />
-					magna sed accumsan arcu neque.</h2>
+				<h2>Framework Django</h2>
 			</header>
-			<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia
-				ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque
-				commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi
-				lorem vulputate lorem neque cubilia.</p>
+			<p>Django e Python</p>
 			<ul class="actions">
-				<li><a href="#" class="button">Learn More</a></li>
+				<li><a href="#" class="button">Django 3</a></li>
 			</ul>
 		</section>
 
 		<!-- Two -->
 		<section id="two">
-			<h2>Recent Work</h2>
+			<h2>Posts</h2>
+			{{ lis.title }}
 			<div class="row">
+				{% for item in post %}
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="{% static 'images/fulls/01.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/01.jpg' %}" alt="" /></a>
-					<h3>Magna sed consequat tempus</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+					<a href="{% static 'images/fulls/01.jpg' %}" class="image fit thumb"><img
+							src="{% static 'images/thumbs/01.jpg' %}" alt="" /></a>
+					<h3>ola</h3>
+					<h3>{{ item.title }}</h3>
+					<p>{{item.content}}</p>
 				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="{% static 'images/fulls/02.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/02.jpg' %}" alt="" /></a>
-					<h3>Ultricies lacinia interdum</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="{% static 'images/fulls/03.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/03.jpg' %}" alt="" /></a>
-					<h3>Tortor metus commodo</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="{% static 'images/fulls/04.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/04.jpg' %}" alt="" /></a>
-					<h3>Quam neque phasellus</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="{% static 'images/fulls/05.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/05.jpg' %}" alt="" /></a>
-					<h3>Nunc enim commodo aliquet</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="{% static 'images/fulls/06.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/06.jpg' %}" alt="" /></a>
-					<h3>Risus ornare lacinia</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
+				{% endfor %}
 			</div>
+
+
+
 			<ul class="actions">
-				<li><a href="#" class="button">Full Portfolio</a></li>
+				<li><a href="#" class="button">Temas de Django</a></li>
 			</ul>
 		</section>
 
@@ -146,7 +120,7 @@
 
 		<!-- Scripts -->
 		<script src="{% static 'assets/js/jquery.min.js' %}"></script>
-		<script src="{% static 'assets/js/jquery.poptrox.min.js' %}" ></script>
+		<script src="{% static 'assets/js/jquery.poptrox.min.js' %}"></script>
 		<script src="{% static 'assets/js/browser.min.js' %}"></script>
 		<script src="{% static 'assets/js/breakpoints.min.js' %}"></script>
 		<script src="{% static 'assets/js/util.js' %}"></script>
